crates/pixi_manifest/src/snapshots/pixi_manifest__system_requirements__tests__serialization_other_family.snap
---
source: crates/pixi_manifest/src/system_requirements.rs
expression: serialized
---
macos = "10.15"
linux = "5.11"
cuda = "12.2"
archspec = "x86_64"

[libc]
family = "glibc"
version = "2.12"
